--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "aes-js": "^3.1.1",
     "express": "^4.16.2",
     "idx": "^2.4.0",
     "kue": "^0.11.6",
