--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Youxi Li",
   "dependencies": {
     "aes-js": "^3.1.1",
+    "connect-pg-simple": "^5.0.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "idx": "^2.4.0",
