--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "idx": "^2.4.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "json2csv":"^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
