--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "idx": "^2.4.0",
+    "json2csv": "^4.3.2",
     "node-fetch": "2.2.0",
     "pg": "^7.4.3",
     "pg-escape": "^0.2.0",
