--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "aes-js": "^3.1.1",
     "connect-pg-simple": "^5.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "idx": "^2.4.0",
